--- a/0. Tom Mitchell Exercise Solutions/find_s.ipynb
+++ b/0. Tom Mitchell Exercise Solutions/find_s.ipynb
@@ -179,6 +179,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Pclass                                               Name     Sex   Age  \\\n",
+      "0         3                             Mr. Owen Harris Braund    male  22.0   \n",
+      "1         1  Mrs. John Bradley (Florence Briggs Thayer) Cum...  female  38.0   \n",
+      "2         3                              Miss. Laina Heikkinen  female  26.0   \n",
+      "3         1        Mrs. Jacques Heath (Lily May Peel) Futrelle  female  35.0   \n",
+      "4         3                            Mr. William Henry Allen    male  35.0   \n",
+      "..      ...                                                ...     ...   ...   \n",
+      "882       2                               Rev. Juozas Montvila    male  27.0   \n",
+      "883       1                        Miss. Margaret Edith Graham  female  19.0   \n",
+      "884       3                     Miss. Catherine Helen Johnston  female   7.0   \n",
+      "885       1                               Mr. Karl Howell Behr    male  26.0   \n",
+      "886       3                                 Mr. Patrick Dooley    male  32.0   \n",
+      "\n",
+      "     Siblings/Spouses Aboard  Parents/Children Aboard     Fare  \n",
+      "0                          1                        0   7.2500  \n",
+      "1                          1                        0  71.2833  \n",
+      "2                          0                        0   7.9250  \n",
+      "3                          1                        0  53.1000  \n",
+      "4                          0                        0   8.0500  \n",
+      "..                       ...                      ...      ...  \n",
+      "882                        0                        0  13.0000  \n",
+      "883                        0                        0  30.0000  \n",
+      "884                        1                        2  23.4500  \n",
+      "885                        0                        0  30.0000  \n",
+      "886                        0                        0   7.7500  \n",
+      "\n",
+      "[887 rows x 7 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#converting sex column to label encoder\n",
+    "label_encoder = {'male':0 , 'female':1}\n",
+    "dataset['Sex'].map(label_encoder)\n",
+    "print(dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [
@@ -289,74 +335,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   passengerClass  Gender   Age  Siblings  Parents    Price\n",
-      "0               3    male  22.0         1        0   7.2500\n",
-      "1               1  female  38.0         1        0  71.2833\n",
-      "2               3  female  26.0         0        0   7.9250\n",
-      "3               1  female  35.0         1        0  53.1000\n",
-      "4               3    male  35.0         0        0   8.0500\n"
+      "     passengerClass  Gender   Age  Siblings  Parents    Price\n",
+      "0                 3    male  22.0         1        0   7.2500\n",
+      "1                 1  female  38.0         1        0  71.2833\n",
+      "2                 3  female  26.0         0        0   7.9250\n",
+      "3                 1  female  35.0         1        0  53.1000\n",
+      "4                 3    male  35.0         0        0   8.0500\n",
+      "..              ...     ...   ...       ...      ...      ...\n",
+      "349               1    male  43.0         0        0  35.0000\n",
+      "350               3    male  15.0         1        1   7.2292\n",
+      "351               3    male  25.0         1        0  17.8000\n",
+      "352               3    male  23.0         0        0   7.2250\n",
+      "353               3    male  28.0         0        0   9.5000\n",
+      "\n",
+      "[354 rows x 6 columns]\n"
      ]
     }
    ],
    "source": [
-    "print(features.head())"
+    "print(features)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0    0\n",
-      "1    1\n",
-      "2    1\n",
-      "3    1\n",
-      "4    0\n",
-      "Name: Survived, dtype: int64\n"
+      "0      0\n",
+      "1      1\n",
+      "2      1\n",
+      "3      1\n",
+      "4      0\n",
+      "      ..\n",
+      "349    0\n",
+      "350    0\n",
+      "351    0\n",
+      "352    0\n",
+      "353    0\n",
+      "Name: Survived, Length: 354, dtype: int64\n"
      ]
     }
    ],
    "source": [
-    "print(taget_samples[:5])"
+    "print(taget_samples)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "def train(c,t):\n",
     "    for i, val in enumerate(t):\n",
     "        if val == 1:\n",
-    "            h = c[i].copy()\n",
+    "            specific_hypothesis = c[i].copy()\n",
     "            break\n",
     "             \n",
     "    for i, val in enumerate(c):\n",
     "        if t[i] == 1:\n",
-    "            for x in range(len(h)):\n",
-    "                if val[x] != h[x]:\n",
-    "                    h[x] = '?'\n",
+    "            for x in range(len(specific_hypothesis)):\n",
+    "                if val[x] != specific_hypothesis[x]:\n",
+    "                    specific_hypothesis[x] = '?'\n",
     "                else:\n",
     "                    pass\n",
     "                 \n",
-    "    return h"
+    "    return specific_hypothesis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +434,16 @@
       "\n",
       "\n",
       "\n",
-      "[0 1 1]\n"
+      "[0 1 1 1 0 0 0 0 1 1 1 1 0 0 0 1 0 1 0 1 0 1 1 1 0 1 0 0 1 0 0 1 1 0 0 0 1\n",
+      " 0 0 1 0 0 1 1 0 0 1 0 0 0 0 1 1 0 1 1 0 1 0 0 1 0 0 0 1 1 0 1 0 0 0 0 0 1\n",
+      " 0 0 0 1 1 0 1 1 0 1 1 0 0 1 0 0 0 0 0 0 0 0 1 1 0 0 0 0 0 0 0 1 1 0 1 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 1 0 1 0 1 1 0 0 0 0 1 0 0 1 0 0 0 0 1 1 0 0 0 1 0 0\n",
+      " 0 0 1 0 0 0 0 1 0 0 0 0 1 0 0 0 1 1 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 1 1 0\n",
+      " 1 1 0 0 1 0 1 1 1 1 0 0 1 0 0 0 0 0 1 0 0 1 1 1 0 1 0 0 0 1 1 0 1 0 1 0 0\n",
+      " 0 1 0 1 0 0 0 1 0 0 1 0 0 0 1 0 0 0 1 0 0 0 0 0 1 1 0 0 0 0 0 0 1 1 1 1 1\n",
+      " 1 0 0 0 0 0 1 1 1 0 1 1 0 1 1 0 0 0 1 0 0 0 1 0 0 1 0 1 1 1 1 0 0 0 0 0 0\n",
+      " 1 1 1 1 0 1 0 1 1 1 0 1 1 1 0 0 0 1 1 0 1 1 0 0 1 1 0 1 0 1 1 1 1 0 0 0 1\n",
+      " 0 0 1 1 0 1 1 0 0 0 1 1 1 1 0 0 0 0 0 0 0]\n"
      ]
     }
    ],
@@ -382,13 +451,33 @@
     "features_copy = features.copy()\n",
     "features_arr = np.array(features_copy)\n",
     "print(features_arr ,end=\"\\n\\n\\n\\n\\n\")\n",
-    "target_arr = np.array(taget_samples[:3])\n",
-    "print(target_arr[:3])"
+    "target_arr = np.array(taget_samples)\n",
+    "print(target_arr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['?', '?', '?', '?', '?', '?'], dtype=object)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train(features_arr,target_arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +486,7 @@
        "354"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,203 +497,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "low_range =0\n",
-    "high_range = 5"
+    "low_range =2\n",
+    "high_range = 6"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "features_selected = ['passengerClass','Gender','Age','Parents'\n",
-    "                    ]\n",
-    "dataset_selected = dataset[features_selected]\n",
-    "features_arr = np.array(dataset_selected)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['?' 'female' '?' 0]\n"
-     ]
-    }
-   ],
-   "source": [
-    "hypothesis=train(features_arr[low_range:high_range] , target_arr[low_range:high_range])\n",
-    "print(hypothesis)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def match (h,a,count):\n",
-    "        score=0\n",
-    "        for i in range(len(a)):\n",
-    "            if h[i]=='?':\n",
-    "                continue\n",
-    "            elif h[i]==a[i]:\n",
-    "                score+=1\n",
-    "        if count==score:\n",
-    "            return True\n",
-    "        else :\n",
-    "            return False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def score(hypothesis ,countH, data , targets):\n",
-    "    score=0\n",
-    "    for i in range(len(targets)):\n",
-    "        if match(hypothesis,data[i],countH):\n",
-    "            score+=1\n",
-    "    return int(score/len(targets)*100)\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x=features_arr[10:14]\n",
-    "y=target_arr[10:14]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "25"
+       "array(['?', 'female', '?', '?', 0, '?'], dtype=object)"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "score(hypothesis,2,x,y)"
+    "train(features_arr[low_range:high_range] , target_arr[low_range:high_range])"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 69,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
    "source": [
-    "h=['?','?',3,'?']\n",
-    "a=[1,2,3,4]\n",
-    "count=1\n",
-    "def match (h,a,count):\n",
-    "        score=0\n",
-    "        for i in range(len(a)):\n",
-    "            if h[i]=='?':\n",
-    "                continue\n",
-    "            elif h[i]==a[i]:\n",
-    "                score+=1\n",
-    "        if count==score:\n",
-    "            return True\n",
-    "        else :\n",
-    "            return False\n",
-    "print(match(h,a,1))\n",
-    "                "
+    "#### size = [1,2,3,4,5,6,7,8,9,10]\n",
+    "for i in size :\n",
+    "    print(i,train(features_arr[:i],target_arr[:i]))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "yes\n"
-     ]
-    }
-   ],
-   "source": [
-    "arr=[1,2,3,4]\n",
-    "arr2 =[1,2,3,4]\n",
-    "if arr==arr2:\n",
-    "        print('yes')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    age  anaemia  creatinine_phosphokinase  diabetes  ejection_fraction  \\\n",
-      "0  75.0        0                       582         0                 20   \n",
-      "1  55.0        0                      7861         0                 38   \n",
-      "2  65.0        0                       146         0                 20   \n",
-      "3  50.0        1                       111         0                 20   \n",
-      "4  65.0        1                       160         1                 20   \n",
-      "\n",
-      "   high_blood_pressure  platelets  serum_creatinine  serum_sodium  sex  \\\n",
-      "0                    1  265000.00               1.9           130    1   \n",
-      "1                    0  263358.03               1.1           136    1   \n",
-      "2                    0  162000.00               1.3           129    1   \n",
-      "3                    0  210000.00               1.9           137    1   \n",
-      "4                    0  327000.00               2.7           116    0   \n",
-      "\n",
-      "   smoking  time  DEATH_EVENT  \n",
-      "0        0     4            1  \n",
-      "1        0     6            1  \n",
-      "2        1     7            1  \n",
-      "3        0     7            1  \n",
-      "4        0     8            1  \n"
-     ]
-    }
-   ],
-   "source": [
-    "clinic_df = pd.read_csv('./heart_failure.csv')\n",
-    "print(clinic_df.head())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
